Cambios en los href

--- a/index_componentes.html
+++ b/index_componentes.html
@@ -20,7 +20,7 @@
       
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">España</a>
+            <a class="nav-link dropdown-toggle" href="espania.js" role="button" data-bs-toggle="dropdown">España</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Asturias</a></li>
               <li><a class="dropdown-item" href="#">Andalucia</a></li>
@@ -29,10 +29,10 @@
           </li>
         
           <li class="nav-item">
-            <a class="nav-link" href="secretaria.js">Economia</a>
+            <a class="nav-link" href="economia.js">Economia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="formacion.js">Tecnología</a>
+            <a class="nav-link" href="tecnologia.js">Tecnología</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Deportes</a>
